[package]
name = "libjxl-src"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
license = "ISC"
keywords = ["libjxl", "jxl", "JPEG XL"]
categories = ["multimedia::images"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.45"
