[package]
name = "kagamijxl"
version = "0.2.9"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"
description = "Opinionated JPEG XL decoder/encoder library."
license = "ISC"
readme = "README.md"
repository = "https://github.com/saschanaz/jxl-rs/tree/main/kagamijxl"
keywords = ["libjxl", "jxl", "jpegxl"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libjxl-sys = { version = "0.5.0", path = "../libjxl-sys" }
