[package]
name = "libjxl-src"
version = "0.5.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
license = "ISC"
keywords = ["libjxl", "jxl", "jpegxl"]
categories = ["multimedia::images"]
description = "Provides a vendored libjxl."
repository = "https://github.com/saschanaz/jxl-rs/tree/main/libjxl-src"
edition = "2018"
build = "build.rs"
exclude = [
  "submodules/libjxl/third_party/brotli/csharp",
  "submodules/libjxl/third_party/brotli/docs",
  "submodules/libjxl/third_party/brotli/fetch-spec",
  "submodules/libjxl/third_party/brotli/go",
  "submodules/libjxl/third_party/brotli/java",
  "submodules/libjxl/third_party/brotli/js",
  "submodules/libjxl/third_party/brotli/python",
  "submodules/libjxl/third_party/brotli/research",
  "submodules/libjxl/third_party/brotli/tests",
  "submodules/libjxl/third_party/difftest_ng",
  "submodules/libjxl/third_party/googletest",
  "submodules/libjxl/third_party/highway/g3doc",
  "submodules/libjxl/third_party/IQA-optimization",
  "submodules/libjxl/third_party/lcms",
  "submodules/libjxl/third_party/skcms/profiles",
  "submodules/libjxl/third_party/sjpeg/tests",
  "submodules/libjxl/third_party/testdata",
  "submodules/libjxl/third_party/vmaf",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmake = "0.1.45"

[build-dependencies]
cmake = "0.1.45"

[features]
default = ["instant-build"]
instant-build = []
