[package]
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
description = "Rust bindings for libjxl, the JPEG XL reference library."
edition = "2018"
license = "ISC"
keywords = ["libjxl", "jxl", "jpegxl"]
categories = ["multimedia::images"]
name = "libjxl-sys"
readme = "README.md"
repository = "https://github.com/saschanaz/jxl-rs/tree/main/libjxl-sys"
version = "0.4.0"
links = "jxl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"
libjxl-src = { version = "0.4.0", path = "../libjxl-src", default-features = false }
